testData/annotation.semantic/UcFirstClassName.hx
class <error descr="Type name 'test' must start with uppercase"><caret>test</error> {

}